# tiny-js

./: CMakeLists.txt  README.md  main.cpp
include/: ast.h  common.h  compiler.h  jit.h  object.h  parser.h  scanner.h  token.h  vm.h
include/native/: base.h  file.h  string.h
scripts/: array.js  basic.js  class.js  demo.js  file.js  jit.js  jit_test.js  main.js  object.js  system.js
src/: compiler.cpp  jit.cpp  parser.cpp  scanner.cpp  vm.cpp
src/native/: base.cpp  file.cpp  object.cpp  require.cpp  string.cpp  sys_object.h
tests/: CMakeLists.txt  jit_test.cpp
